<resources>
    <string name="app_name">EndOfLifePlanner</string>
    <string name="shell_status">Android runnable implementation with CommonOS consumer contract</string>
    <string name="label_entry_type">Entry Type</string>
    <string name="label_title">Title</string>
    <string name="hint_title">Emergency contact list</string>
    <string name="label_status">Status</string>
    <string name="label_visibility">Visibility</string>
    <string name="label_target_person">Target Person</string>
    <string name="hint_target_person">Spouse or child</string>
    <string name="label_review_date">Review Date</string>
    <string name="hint_review_date">2026-04-21</string>
    <string name="label_contact_or_location">Contact or Location</string>
    <string name="hint_contact_or_location">Home cabinet A-2</string>
    <string name="label_importance">Importance</string>
    <string name="label_memo">Memo</string>
    <string name="hint_memo">Wish or handover note</string>
    <string name="button_save">Save Entry</string>
    <string name="button_sample">Insert Sample</string>
    <string name="button_clear">Clear Data</string>
    <string name="label_summary">Summary</string>
    <string name="label_records">Records</string>
</resources>
